--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tree-sitter-prisma",
+  "name": "@gushogg-blake/tree-sitter-prisma",
   "version": "1.5.1",
   "description": "Prisma Grammar with Tree Sitter",
   "keywords": [
@@ -39,7 +39,7 @@
     "nan": "^2.22.0"
   },
   "peerDependencies": {
-    "tree-sitter": "^0.22.4"
+    "tree-sitter": "^0.21.1"
   },
   "peerDependenciesMeta": {
     "tree-sitter": {
